make a function that can scrape college data

--- a/Web_Crawl/Crawl_Player_CollegeData.ipynb
+++ b/Web_Crawl/Crawl_Player_CollegeData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -15,29 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "import requests\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -94,13 +84,14 @@
        "</table>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "leb = 'http://www.basketball-reference.com/players/a/anderal01.html/'\n",
+    "#leb='http://www.basketball-reference.com/players/g/gordoaa01.html'\n",
     "player_string_key = leb\n",
     "req = requests.get(player_string_key)\n",
     "index = req.text.find('div_all_college_stats')\n",
@@ -112,19 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "column_headers = [th.getText() for th in soup.findAll('tr', limit=2)[1].findAll('th')]\n",
-    "#column_headers = [th.getText() for th in soup.findAll('tr', limit=2)[1].findAll('th')]"
+    "column_headers = [th.getText() for th in soup.findAll('tr', limit=2)[1].findAll('th')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +150,7 @@
        " 'AST']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,18 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_rows = soup.findAll('tr')[2:]  # skip the"
+    "data_rows = soup.findAll('tr')[2:]  # skip the first two columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +342,7 @@
        "  '2.4']]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -565,7 +555,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,12 +566,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def college_data_scraper(url):\n",
+    "    ## scrape the college table\n",
+    "    req = requests.get(url)\n",
+    "    index = req.text.find('div_all_college_stats')\n",
+    "    text = req.text[index:]\n",
+    "    soup = BeautifulSoup(text, \"html.parser\")\n",
+    "    table = soup.find('table', id = 'all_college_stats')\n",
+    "    \n",
+    "    ## extract column headers\n",
+    "    column_headers = [th.getText() for th in soup.findAll('tr', limit=2)[1].findAll('th')]\n",
+    "    \n",
+    "    ## extract contents from the table\n",
+    "    data_rows = soup.findAll('tr')[2:]  # skip the first two columns\n",
+    "    player_data = [[td.getText() for td in data_rows[i].findAll('td')] \n",
+    "               for i in range(len(data_rows))]\n",
+    "    \n",
+    "    ## extract the first column (season)\n",
+    "    season_data = [[th.getText() for th in data_rows[i].findAll('th')] \n",
+    "               for i in range(len(data_rows))]\n",
+    "    season_data = np.reshape(season_data, -1)\n",
+    "    \n",
+    "    ## combine the columns and data as a data frame\n",
+    "    df = pd.DataFrame(player_data, columns=column_headers[1:])\n",
+    "    df[\"Season\"] = season_data\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>College</th>\n",
+       "      <th>G</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>FG</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>3P</th>\n",
+       "      <th>3PA</th>\n",
+       "      <th>FT</th>\n",
+       "      <th>FTA</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>FG%</th>\n",
+       "      <th>3P%</th>\n",
+       "      <th>FT%</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>Season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>UNLV</td>\n",
+       "      <td>35</td>\n",
+       "      <td>950</td>\n",
+       "      <td>202</td>\n",
+       "      <td>379</td>\n",
+       "      <td>36</td>\n",
+       "      <td>96</td>\n",
+       "      <td>124</td>\n",
+       "      <td>177</td>\n",
+       "      <td>...</td>\n",
+       "      <td>80</td>\n",
+       "      <td>564</td>\n",
+       "      <td>.533</td>\n",
+       "      <td>.375</td>\n",
+       "      <td>.701</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2012-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>35</td>\n",
+       "      <td>950</td>\n",
+       "      <td>202</td>\n",
+       "      <td>379</td>\n",
+       "      <td>36</td>\n",
+       "      <td>96</td>\n",
+       "      <td>124</td>\n",
+       "      <td>177</td>\n",
+       "      <td>...</td>\n",
+       "      <td>80</td>\n",
+       "      <td>564</td>\n",
+       "      <td>.533</td>\n",
+       "      <td>.375</td>\n",
+       "      <td>.701</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Career</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Age College   G   MP   FG  FGA  3P 3PA   FT  FTA   ...     PF  PTS   FG%  \\\n",
+       "0  19    UNLV  35  950  202  379  36  96  124  177   ...     80  564  .533   \n",
+       "1              35  950  202  379  36  96  124  177   ...     80  564  .533   \n",
+       "\n",
+       "    3P%   FT%    MP   PTS  TRB  AST   Season  \n",
+       "0  .375  .701  27.1  16.1  8.1  1.0  2012-13  \n",
+       "1  .375  .701  27.1  16.1  8.1  1.0   Career  \n",
+       "\n",
+       "[2 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = college_data_scraper(\"http://www.basketball-reference.com/players/b/bennean01.html\")\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://www.basketball-reference.com/players/b/bennean01.html'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base = 'http://www.basketball-reference.com/players/'\n",
+    "player='b/bennean01'\n",
+    "ext='.html'\n",
+    "base+player+ext"
+   ]
   }
  ],
  "metadata": {
